[metadata]
name = capcake
version = 0.0.1
author = Sina Kashipazha
author_email = esterlinkof@gmail.com
description = Package to capture network traffic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soreana/capcake
project_urls =
    Bug Tracker = https://github.com/soreana/capcake/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: System :: Monitoring

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
